--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": " https://titova-polina.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://titova-polina.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
@@ -11,10 +14,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "formik": "^2.4.3",
+    "framer-motion": "^10.16.4",
+    "hooks": "^0.3.2",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
